First blog entry

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -2,11 +2,11 @@
   <div id="header-wrapper">
     <nav>
       <a class="instant" href="/">{{ config.extra.id }}</a>
-      {% if config.extra.sections | length > 1 %}
-        <button id="toggler" class="separator" aria-label="toggle expand">{{ config.extra.nav_separator }}</button>
-      {% else %}
-        <span class="separator">{{ config.extra.nav_separator }}</span>
-      {% endif %}
+      <!--{% if config.extra.sections | length > 1 %}
+      <!--  <button id="toggler" class="separator" aria-label="toggle expand">{{ config.extra.nav_separator }}</button>
+      <!--{% else %}
+      <!--  <span class="separator">{{ config.extra.nav_separator }}</span>
+      <!--{% endif %}-->
       {% if config.extra.sections | length > 1 %}
         <span class="wrap left fold">{{ config.extra.nav_wrapper_left }}</span>
         {% set_global is_taxonomies_path = false %}
@@ -29,7 +29,7 @@
         <span class="wrap right fold">{{ config.extra.nav_wrapper_right }}</span>
       {% else %}
         {% set section = config.extra.sections | first %}
-        <a class="instant" href="{{ section.path }}">{{ section.name }}</a>
+        <!--<a class="instant" href="{{ section.path }}">{{ section.name }}</a>-->
       {% endif %}
     </nav>
     <div id="btns">
